--- a/webapp/Accessible/Views/Home/Index.cshtml
+++ b/webapp/Accessible/Views/Home/Index.cshtml
@@ -1,17 +1,34 @@
-﻿@{
+﻿@model MapViewModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
 
 <div id="map"></div>
 <script>
+    function setMarkers(map) {
+        var beaches = @Html.Raw(Json.Serialize(Model.Locations));
+        for (var i = 0; i < beaches.length; i++) {
+            var beach = beaches[i];
+            var marker = new google.maps.Marker({
+                position: { lat: beach.lat, lng: beach.long },
+                map: map,
+                icon: `https://maps.google.com/mapfiles/ms/icons/${beach.colour}-dot.png`,
+                animation: google.maps.Animation.DROP,
+                title: beach.name
+            });
+        }
+    }
 
     var map;
     function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 4,
-            center: { lat: -28, lng: 137 }
+            zoom: 11,
+            // TODO: replace with user's location from IP
+            center: { lat: -33.9, lng: 151 },
+            mapTypeControlOptions: { mapTypeIds: [] }
         });
+        setMarkers(map);
     }
 </script>
 <script async defer
