--- a/webapp/Accessible/Views/Shared/_Layout.cshtml
+++ b/webapp/Accessible/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="AddLocation">Add Location</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
@@ -40,7 +41,7 @@
 
     <partial name="_CookieConsentPartial" />
 
-    @*<div>*@
+    <div class="main-content">
         @*<div class="container body-content">*@
         @RenderBody()
         @*<hr />
@@ -48,7 +49,7 @@
             <p>&copy; 2018 - Accessible</p>
         </footer>*@
         @*</div>*@
-    @*</div>*@
+    </div>
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
