--- a/webapp/Accessible/wwwroot/css/site.css
+++ b/webapp/Accessible/wwwroot/css/site.css
@@ -5,6 +5,11 @@ body {
     padding-bottom: 20px;
 }
 
+.main-content {
+    height: 100%;
+    width: 100%;
+}
+
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
@@ -12,10 +17,15 @@ body {
     padding-right: 15px;
 }
 
+.navbar {
+    margin-bottom: 0px;
+}
+
 /* Always set the map height explicitly to define the size of the div
         * element that contains the map. */
 #map {
     height: 100%;
+    width: 100%;
 }
 /* Optional: Makes the sample page fill the window. */
 html, body {
