--- a/webapp/Accessible/Views/Home/About.cshtml
+++ b/webapp/Accessible/Views/Home/About.cshtml
@@ -1,7 +1,116 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<section id="section1">
+    <div class="container">
+        <h1>Access<span style="color: rgb(255, 35, 90);">ibly</span>.</h1>
+        <div id="landing-blurb">
+            <p style="font-size: 1.33333rem; line-height: 2rem;">A location review platform for people with disability to share and discover places tailored to individual access needs.</p>
+            <p style="font-size: 1.33333rem; line-height: 2rem;">Coming soon-ish! Sign up for updates on our release &#x1F481</p>
+            <form>
+                <input type="text" name="emailaddress" placheholder="Email Address" id="input-email" />
+                <button onclick="LPAWS.sendToTopic(); return false;">Sign Up</button>
+            </form>
+        </div>
+    </div>
+</section>
+
+<section id="section2">
+    <div class="container">
+        <h2>How it works</h2>
+        <div class="flex-four-grid">
+            <div class="feature-container">
+                <img src="~/images/search.png" />
+                <div class="feature-content">
+                    <h3 class="feature-header">Search</h3>
+                    <p>Search for specific locations with the accessibility features you require.</p>
+                </div>
+            </div>
+            <div class="feature-container">
+                <img src="~/images/rate.png" />
+                <div class="feature-content">
+                    <h3 class="feature-header">Rate</h3>
+                    <p>Join our global community by rating new locations on our map with tags and descriptions.</p>
+                </div>
+            </div>
+            <div class="feature-container">
+                <img src="~/images/filter.png" />
+                <div class="feature-content">
+                    <h3 class="feature-header">Filter</h3>
+                    <p>Filter the map to discover places with specific accessibility features.</p>
+                </div>
+            </div>
+            <div class="feature-container">
+                <img src="~/images/discover.png" />
+                <div class="feature-content">
+                    <h3 class="feature-header">Discover</h3>
+                    <p>Browse our interactive map to discover accessible places around the world.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="section3">
+    <div class="container">
+        <h2>How to use Accessibly</h2>
+        <div class="mockup"><img width="977" height="524" src="~/images/mockup.png"></div>
+        <!--div class="responsive-video"><iframe width="977" height="524" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div-->
+        <div class="flex-three-grid">
+            <div class="flex-three-container">
+                <img src="~/images/green-pin-1.png" alt="Green pin" />
+                <h3 class="legend-header">Accessible</h3>
+                <p>A green pin on our map represents an <b>accessible</b> location. These are places with full access, where we can get in, party, and go home with no problem.</p>
+            </div>
+            <div class="flex-three-container">
+                <img src="~/images/amber-pin-1.png" alt="Amber pin" />
+                <h3 class="legend-header">Partially Accessible</h3>
+                <p>An amber pin on our map represents a location that is <b>partially accessible</b>. Amber locations often have alternative entrances or limited access within the space, such as steps to the bar area.</p>
+            </div>
+            <div class="flex-three-container">
+                <img src="red-pin-1.png" alt="Red pin" />
+                <h3 class="legend-header">Not Accessible</h3>
+                <p>A red pin on our map represents a location that is <b>not accessible</b>. Find a red pin on our map? Why not tweet <a href="http://twitter.com/AccessiblyAU">@@AccessiblyAU</a> about it and let’s make change happen.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="section4" class="has-bg-img" style="background-image: url('~/images/bg-richmond-edit.jpg')">
+    <div class="container"><!--a href="/map.html" class="explore-call-to-action"><h2>Start exploring</h2></a--></div>
+</section>
+
+<section id="section5">
+    <div class="container">
+        <h2>Our impact</h2>
+        <div class="flex-three-grid">
+            <div class="flex-three-container">
+                <img src="~/images/gradient-55.png" alt="55" />
+                <h3>Cities</h3>
+            </div>
+            <div class="flex-three-container">
+                <img src="~/images/gradient-108.png" alt="108" />
+                <h3>Locations Pinned</h3>
+            </div>
+            <div class="flex-three-container">
+                <img src="~/images/gradient-1.png" alt="1" />
+                <h3>Mission</h3>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="section6">
+    <div class="container">
+        <!--h2>Coming soon...</h2>
+            <ul><li>Dotpoint</li><li>Dotpoint</li></ul>
+          </div>
+          <p>You can <a href="mailto:sayhellotoalexandra@gmail.com" title="contact us">reach us here</a>. <img draggable="false" class="emoji" alt="" src="https://s.w.org/images/core/emoji/2.3/svg/261d.svg" scale="1"/>
+        </section>
+
+        <section id="footer">
+          <div class="container"-->
+        <p>A huge shoutout goes to everyone who are making Accessibly possible. Together we are helping each other go places accessibly.</p><p>Follow  <span style="color: rgb(255, 211, 0);" --><a href="http://www.twitter.com/AccessiblyAU" target="_blank" rel="noopener" title="AccessiblyAU on Twitter">our Twitter</a></span> for other disability-related stuff. &#x1F448</p>
+    </div>
+</section>
