Add other DTOs to create full data model
- Fix images on About page

--- a/webapp/Accessible/Views/Home/AddLocation.cshtml
+++ b/webapp/Accessible/Views/Home/AddLocation.cshtml
@@ -21,14 +21,14 @@
                 <span asp-validation-for="Colour" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Lat" class="control-label"></label>
-                <input asp-for="Lat" class="form-control" />
-                <span asp-validation-for="Lat" class="text-danger"></span>
+                <label asp-for="Coordinate.Lat" class="control-label"></label>
+                <input asp-for="Coordinate.Lat" class="form-control" />
+                <span asp-validation-for="Coordinate.Lat" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Long" class="control-label"></label>
-                <input asp-for="Long" class="form-control" />
-                <span asp-validation-for="Long" class="text-danger"></span>
+                <label asp-for="Coordinate.Lng" class="control-label"></label>
+                <input asp-for="Coordinate.Lng" class="form-control" />
+                <span asp-validation-for="Coordinate.Lng" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
