--- a/webapp/Accessible/wwwroot/css/site.css
+++ b/webapp/Accessible/wwwroot/css/site.css
@@ -1,10 +1,7 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
-body {
-    padding-top: 50px;
-}
 
-.main-content {
+.map-content {
     position: relative;
     height: 100%;
     width: 100%;
